Add more documentation on #eql?/#hash relationship [ci skip]

Fixes [Bug #14263]